[package]
name = "radarflow"
version = "0.2.2"
authors = ["Janek S <development@superyu.xyz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# memory
memflow = "0.2.0"
dataview = "1.0.1"

# logging
log = "0.4.19"
simple_logger = "4.2.0"

# error handling
anyhow = "1.0.79"

# derive stuff
enum-primitive-derive = "0.2.2"
num-traits = "0.2.16"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
clap = { version = "4.3.19", features = ["derive", "string"] }

# tokio
tokio = { version = "1.29.1", features = ["full"] }

# networking
axum = { version = "0.6.20", features = ["ws"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tower = "0.4.13"
local-ip-address = "0.5.4"

# other
itertools = "0.12.0"


[build-dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
